# arzing-ai

./: .gitignore  IMPLEMENTATION_PLAN.md  Makefile  README.md
.agents/skills/cspr-cloud/: SKILL.md
backend/: .env.example  generate_keys.js  migrate.js  package-lock.json  package.json
backend/keys/: public_key_hex.txt
backend/src/: index.ts
backend/src/agents/: auditor.ts  sentinel.ts
backend/src/analysis/: risk-scorer.ts  rust-analyzer.ts
backend/src/llm/: router.ts
backend/src/routes/: alerts.ts  audit.ts  network.ts  validators.ts
backend/src/services/: cspr-cloud.ts  database.ts  validator.ts
backend/src/x402/: middleware.ts
contracts/: Cargo.toml  Makefile  Odra.toml  casper_livenet.env
contracts/src/: audit_registry.rs  lib.rs  main.rs
contracts/wasm/: AuditRegistry.wasm  audit_registry.wasm
docs/: ARCHITECTURE.md  DEMO_SCENARIOS.md  DEPLOYMENT.md  GITHUB_SETUP.md  MONETIZATION.md  SMART_CONTRACTS.md  USAGE.md  X402_INTEGRATION.md
frontend/: .env.local.example  next.config.js  package-lock.json  package.json
frontend/.next/: trace
frontend/.next/cache/: .tsbuildinfo
frontend/.next/server/: server-reference-manifest.js  server-reference-manifest.json
frontend/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/src/app/audit/: page.module.css  page.tsx
frontend/src/components/: AlertFeed.module.css  AlertFeed.tsx  Navbar.module.css  Navbar.tsx  RiskGauge.module.css  RiskGauge.tsx  StatCard.module.css  StatCard.tsx  ValidatorMiniList.module.css  ValidatorMiniList.tsx  WalletButton.tsx
keys/: public_key_hex
(+11 files in other folders)
