[package]
name = "casperguard-contracts"
version = "0.1.0"
edition = "2021"

# The AuditRegistry smart contract — reconstructed from on-chain ABI and IDE session logs.
# Originally built with Odra Framework v2.x and deployed to Casper Testnet on 2026-07-05.
# Live contract: hash-0fac2940d2669bb4291e6603c8ea10fbd5181f8c29fb0c19077b91c08946344c
[lib]
name = "casperguard_contracts"
path = "src/lib.rs"

[dependencies]
odra = { version = "2.1.0", default-features = false }

[build-dependencies]
odra-build = { version = "2.1.0", default-features = false }

# Casper livenet env — only for native (non-wasm) deployment scripts
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-casper-livenet-env = { version = "2.1.0" }

[features]
default = []

# Deployment binary — NOT the build_contract (that is handled by odra-build in build.rs)
[[bin]]
name = "deploy"
path = "bin/deploy.rs"

# Odra CLI expects this binary target to produce the deployable WASM
[[bin]]
name = "casperguard_contracts_build_contract"
path = "bin/build_contract.rs"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
